Revision history for File-KeePass-Agent-KDBX.

{{$NEXT}}

0.900     2022-04-30 23:13:23-0600

  * Initial release
