@@ -2,6 +2,9 @@ Revision history for File-KeePass-Agent-KDBX.
 
 {{$NEXT}}
 
+  * Now tests are skipped if they would fail because the OS is not supported.
+    No other changes.
+
 0.900     2022-04-30 23:13:23-0600
 
   * Initial release
